azure-pvc-nginx.yml
kind: Pod
apiVersion: v1
metadata:
  name: nginxtest
spec:
  containers:
  - name: nginxtest
    image: k8stestoh.azurecr.io/nginx_test:2
    imagePullPolicy: IfNotPresent
    resources:
      requests:
        cpu: 100m
        memory: 128Mi
      limits:
        cpu: 250m
        memory: 256Mi
    volumeMounts:
    - mountPath: "/mnt/azure"
      name: volume
  imagePullSecrets:
    - name: acrtest
  volumes:
    - name: volume
      persistentVolumeClaim:
        claimName: my-azurefile
