test-pvc.yml
kind: Pod
apiVersion: v1
metadata:
  name: nginxtest
spec:
  containers:
  - name: nginxtest
    image: nginx
    resources:
      requests:
        cpu: 100m
        memory: 128Mi
      limits:
        cpu: 250m
        memory: 256Mi
    volumeMounts:
    - mountPath: "/mnt/azure"
      name: volume
  volumes:
    - name: volume
      persistentVolumeClaim:
        claimName: my-azurefile
